phase4/parser.output
Terminals unused in grammar

   INTEGER
   IDENTIFIER
   REALNUMBER
   NOKEY
   LINECOMMENT
   COMMENT
   NESTED_COMMENT
   CLOSE_COMMENT
   UNDEFINED


State 103 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmt program
    2        | %empty

    3 stmt: expr SEMICOLON
    4     | ifstmt
    5     | whilestmt
    6     | forstmt
    7     | returnstmt
    8     | KEYWORD_BREAK SEMICOLON
    9     | KEYWORD_CONTINUE SEMICOLON
   10     | block
   11     | funcdef
   12     | SEMICOLON
   13     | error SEMICOLON

   14 expr: assignexpr
   15     | expr PLUS expr
   16     | expr MINUS expr
   17     | expr MULTIPLY expr
   18     | expr DIVIDE expr
   19     | expr MODULO expr
   20     | expr GREATER_THAN expr
   21     | expr GREATER_EQUAL expr
   22     | expr LESS_THAN expr
   23     | expr LESS_EQUAL expr
   24     | expr EQUAL expr
   25     | expr NOT_EQUAL expr
   26     | expr KEYWORD_AND L expr
   27     | expr KEYWORD_OR L expr
   28     | term

   29 term: LEFT_PARENTHESIS expr RIGHT_PARENTHESIS
   30     | MINUS expr
   31     | KEYWORD_NOT expr
   32     | INCREMENT lvalue
   33     | lvalue INCREMENT
   34     | DECREMENT lvalue
   35     | lvalue DECREMENT
   36     | primary

   37 assignexpr: lvalue ASSIGN expr

   38 primary: lvalue
   39        | call
   40        | objectdef
   41        | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS
   42        | const

   43 lvalue: ID
   44       | KEYWORD_LOCAL ID
   45       | DOUBLE_COLON ID
   46       | member

   47 member: lvalue DOT ID
   48       | lvalue LEFT_BRACKET expr RIGHT_BRACKET
   49       | call DOT ID
   50       | call LEFT_BRACKET expr RIGHT_BRACKET

   51 call: call LEFT_PARENTHESIS elist RIGHT_PARENTHESIS
   52     | lvalue callsuffix
   53     | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   54 callsuffix: normcall
   55           | methodcall

   56 normcall: LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   57 methodcall: DOUBLE_DOT ID LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   58 elist: expr elist_tmp
   59      | %empty

   60 elist_tmp: COMMA expr elist_tmp
   61          | %empty

   62 objectdef: LEFT_BRACKET elist RIGHT_BRACKET
   63          | LEFT_BRACKET indexed RIGHT_BRACKET

   64 indexed: indexedelem indexedelemtmp

   65 indexedelemtmp: COMMA indexedelem indexedelemtmp
   66               | %empty

   67 indexedelem: LEFT_BRACE expr COLON expr RIGHT_BRACE

   68 $@1: %empty

   69 $@2: %empty

   70 block: LEFT_BRACE $@1 block_stmt $@2 RIGHT_BRACE

   71 block_stmt: block_stmt stmt
   72           | %empty

   73 id_tmp: ID
   74       | %empty

   75 idlist: ID
   76       | idlist COMMA ID
   77       | %empty

   78 functionprefix: KEYWORD_FUNCTION id_tmp

   79 $@3: %empty

   80 funcargs: LEFT_PARENTHESIS $@3 idlist RIGHT_PARENTHESIS

   81 funcbody: block

   82 funcdef: functionprefix funcargs funcbody

   83 const: INTCONST
   84      | REALCONST
   85      | STRING
   86      | KEYWORD_NIL
   87      | KEYWORD_TRUE
   88      | KEYWORD_FALSE

   89 ifprefix: KEYWORD_IF LEFT_PARENTHESIS expr RIGHT_PARENTHESIS

   90 elseprefix: KEYWORD_ELSE

   91 ifstmt: ifprefix stmt
   92       | ifprefix stmt elseprefix stmt

   93 whilestart: KEYWORD_WHILE

   94 whilecond: LEFT_PARENTHESIS expr RIGHT_PARENTHESIS

   95 whileblock: stmt

   96 whilestmt: whilestart whilecond whileblock

   97 Q: %empty

   98 R: %empty

   99 forstmt: forprefix S Q elist R RIGHT_PARENTHESIS S stmt S

  100 forprefix: KEYWORD_FOR LEFT_PARENTHESIS Q elist R SEMICOLON L expr SEMICOLON

  101 S: %empty

  102 L: %empty

  103 returnstmt: KEYWORD_RETURN SEMICOLON
  104           | KEYWORD_RETURN expr SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256) 13
INTEGER (258)
STRING (259) 85
IDENTIFIER (260)
REALNUMBER (261)
KEYWORD_IF (262) 89
KEYWORD_ELSE (263) 90
KEYWORD_WHILE (264) 93
KEYWORD_FOR (265) 100
KEYWORD_FUNCTION (266) 78
KEYWORD_RETURN (267) 103 104
KEYWORD_BREAK (268) 8
KEYWORD_CONTINUE (269) 9
KEYWORD_AND (270) 26
KEYWORD_NOT (271) 31
KEYWORD_OR (272) 27
KEYWORD_LOCAL (273) 44
KEYWORD_TRUE (274) 87
KEYWORD_FALSE (275) 88
KEYWORD_NIL (276) 86
NOKEY (277)
ASSIGN (278) 37
PLUS (279) 15
MINUS (280) 16 30
MULTIPLY (281) 17
DIVIDE (282) 18
MODULO (283) 19
EQUAL (284) 24
NOT_EQUAL (285) 25
INCREMENT (286) 32 33
DECREMENT (287) 34 35
LESS_THAN (288) 22
GREATER_THAN (289) 20
LESS_EQUAL (290) 23
GREATER_EQUAL (291) 21
LEFT_BRACE (292) 67 70
RIGHT_BRACE (293) 67 70
LEFT_BRACKET (294) 48 50 62 63
RIGHT_BRACKET (295) 48 50 62 63
LEFT_PARENTHESIS (296) 29 41 51 53 56 57 80 89 94 100
RIGHT_PARENTHESIS (297) 29 41 51 53 56 57 80 89 94 99
SEMICOLON (298) 3 8 9 12 13 100 103 104
COMMA (299) 60 65 76
COLON (300) 67
DOUBLE_COLON (301) 45
DOT (302) 47 49
DOUBLE_DOT (303) 57
INTCONST (304) 83
REALCONST (305) 84
ID (306) 43 44 45 47 49 57 73 75 76
LINECOMMENT (307)
COMMENT (308)
NESTED_COMMENT (309)
CLOSE_COMMENT (310)
UNDEFINED (311)
UMINUS (312)


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
program (59)
    on left: 1 2, on right: 0 1
stmt (60)
    on left: 3 4 5 6 7 8 9 10 11 12 13, on right: 1 71 91 92 95 99
expr (61)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28, on right:
    3 15 16 17 18 19 20 21 22 23 24 25 26 27 29 30 31 37 48 50 58 60
    67 89 94 100 104
term (62)
    on left: 29 30 31 32 33 34 35 36, on right: 28
assignexpr (63)
    on left: 37, on right: 14
primary (64)
    on left: 38 39 40 41 42, on right: 36
lvalue (65)
    on left: 43 44 45 46, on right: 32 33 34 35 37 38 47 48 52
member (66)
    on left: 47 48 49 50, on right: 46
call (67)
    on left: 51 52 53, on right: 39 49 50 51
callsuffix (68)
    on left: 54 55, on right: 52
normcall (69)
    on left: 56, on right: 54
methodcall (70)
    on left: 57, on right: 55
elist (71)
    on left: 58 59, on right: 51 53 56 57 62 99 100
elist_tmp (72)
    on left: 60 61, on right: 58 60
objectdef (73)
    on left: 62 63, on right: 40
indexed (74)
    on left: 64, on right: 63
indexedelemtmp (75)
    on left: 65 66, on right: 64 65
indexedelem (76)
    on left: 67, on right: 64 65
block (77)
    on left: 70, on right: 10 81
$@1 (78)
    on left: 68, on right: 70
$@2 (79)
    on left: 69, on right: 70
block_stmt (80)
    on left: 71 72, on right: 70 71
id_tmp (81)
    on left: 73 74, on right: 78
idlist (82)
    on left: 75 76 77, on right: 76 80
functionprefix (83)
    on left: 78, on right: 82
funcargs (84)
    on left: 80, on right: 82
$@3 (85)
    on left: 79, on right: 80
funcbody (86)
    on left: 81, on right: 82
funcdef (87)
    on left: 82, on right: 11 41 53
const (88)
    on left: 83 84 85 86 87 88, on right: 42
ifprefix (89)
    on left: 89, on right: 91 92
elseprefix (90)
    on left: 90, on right: 92
ifstmt (91)
    on left: 91 92, on right: 4
whilestart (92)
    on left: 93, on right: 96
whilecond (93)
    on left: 94, on right: 96
whileblock (94)
    on left: 95, on right: 96
whilestmt (95)
    on left: 96, on right: 5
Q (96)
    on left: 97, on right: 99 100
R (97)
    on left: 98, on right: 99 100
forstmt (98)
    on left: 99, on right: 6
forprefix (99)
    on left: 100, on right: 99
S (100)
    on left: 101, on right: 99
L (101)
    on left: 102, on right: 26 27 100
returnstmt (102)
    on left: 103 104, on right: 7


State 0

    0 $accept: . program $end

    error             shift, and go to state 1
    STRING            shift, and go to state 2
    KEYWORD_IF        shift, and go to state 3
    KEYWORD_WHILE     shift, and go to state 4
    KEYWORD_FOR       shift, and go to state 5
    KEYWORD_FUNCTION  shift, and go to state 6
    KEYWORD_RETURN    shift, and go to state 7
    KEYWORD_BREAK     shift, and go to state 8
    KEYWORD_CONTINUE  shift, and go to state 9
    KEYWORD_NOT       shift, and go to state 10
    KEYWORD_LOCAL     shift, and go to state 11
    KEYWORD_TRUE      shift, and go to state 12
    KEYWORD_FALSE     shift, and go to state 13
    KEYWORD_NIL       shift, and go to state 14
    MINUS             shift, and go to state 15
    INCREMENT         shift, and go to state 16
    DECREMENT         shift, and go to state 17
    LEFT_BRACE        shift, and go to state 18
    LEFT_BRACKET      shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 20
    SEMICOLON         shift, and go to state 21
    DOUBLE_COLON      shift, and go to state 22
    INTCONST          shift, and go to state 23
    REALCONST         shift, and go to state 24
    ID                shift, and go to state 25

    $end  reduce using rule 2 (program)

    program         go to state 26
    stmt            go to state 27
    expr            go to state 28
    term            go to state 29
    assignexpr      go to state 30
    primary         go to state 31
    lvalue          go to state 32
    member          go to state 33
    call            go to state 34
    objectdef       go to state 35
    block           go to state 36
    functionprefix  go to state 37
    funcdef         go to state 38
    const           go to state 39
    ifprefix        go to state 40
    ifstmt          go to state 41
    whilestart      go to state 42
    whilestmt       go to state 43
    forstmt         go to state 44
    forprefix       go to state 45
    returnstmt      go to state 46


State 1

   13 stmt: error . SEMICOLON

    SEMICOLON  shift, and go to state 47


State 2

   85 const: STRING .

    $default  reduce using rule 85 (const)


State 3

   89 ifprefix: KEYWORD_IF . LEFT_PARENTHESIS expr RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 48


State 4

   93 whilestart: KEYWORD_WHILE .

    $default  reduce using rule 93 (whilestart)


State 5

  100 forprefix: KEYWORD_FOR . LEFT_PARENTHESIS Q elist R SEMICOLON L expr SEMICOLON

    LEFT_PARENTHESIS  shift, and go to state 49


State 6

   78 functionprefix: KEYWORD_FUNCTION . id_tmp

    ID  shift, and go to state 50

    $default  reduce using rule 74 (id_tmp)

    id_tmp  go to state 51


State 7

  103 returnstmt: KEYWORD_RETURN . SEMICOLON
  104           | KEYWORD_RETURN . expr SEMICOLON

    STRING            shift, and go to state 2
    KEYWORD_NOT       shift, and go to state 10
    KEYWORD_LOCAL     shift, and go to state 11
    KEYWORD_TRUE      shift, and go to state 12
    KEYWORD_FALSE     shift, and go to state 13
    KEYWORD_NIL       shift, and go to state 14
    MINUS             shift, and go to state 15
    INCREMENT         shift, and go to state 16
    DECREMENT         shift, and go to state 17
    LEFT_BRACKET      shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 20
    SEMICOLON         shift, and go to state 52
    DOUBLE_COLON      shift, and go to state 22
    INTCONST          shift, and go to state 23
    REALCONST         shift, and go to state 24
    ID                shift, and go to state 25

    expr        go to state 53
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


State 8

    8 stmt: KEYWORD_BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 54


State 9

    9 stmt: KEYWORD_CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 55


State 10

   31 term: KEYWORD_NOT . expr

    STRING            shift, and go to state 2
    KEYWORD_NOT       shift, and go to state 10
    KEYWORD_LOCAL     shift, and go to state 11
    KEYWORD_TRUE      shift, and go to state 12
    KEYWORD_FALSE     shift, and go to state 13
    KEYWORD_NIL       shift, and go to state 14
    MINUS             shift, and go to state 15
    INCREMENT         shift, and go to state 16
    DECREMENT         shift, and go to state 17
    LEFT_BRACKET      shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 20
    DOUBLE_COLON      shift, and go to state 22
    INTCONST          shift, and go to state 23
    REALCONST         shift, and go to state 24
    ID                shift, and go to state 25

    expr        go to state 56
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


State 11

   44 lvalue: KEYWORD_LOCAL . ID

    ID  shift, and go to state 57


State 12

   87 const: KEYWORD_TRUE .

    $default  reduce using rule 87 (const)


State 13

   88 const: KEYWORD_FALSE .

    $default  reduce using rule 88 (const)


State 14

   86 const: KEYWORD_NIL .

    $default  reduce using rule 86 (const)


State 15

   30 term: MINUS . expr

    STRING            shift, and go to state 2
    KEYWORD_NOT       shift, and go to state 10
    KEYWORD_LOCAL     shift, and go to state 11
    KEYWORD_TRUE      shift, and go to state 12
    KEYWORD_FALSE     shift, and go to state 13
    KEYWORD_NIL       shift, and go to state 14
    MINUS             shift, and go to state 15
    INCREMENT         shift, and go to state 16
    DECREMENT         shift, and go to state 17
    LEFT_BRACKET      shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 20
    DOUBLE_COLON      shift, and go to state 22
    INTCONST          shift, and go to state 23
    REALCONST         shift, and go to state 24
    ID                shift, and go to state 25

    expr        go to state 58
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


State 16

   32 term: INCREMENT . lvalue

    KEYWORD_LOCAL     shift, and go to state 11
    LEFT_PARENTHESIS  shift, and go to state 59
    DOUBLE_COLON      shift, and go to state 22
    ID                shift, and go to state 25

    lvalue  go to state 60
    member  go to state 33
    call    go to state 61


State 17

   34 term: DECREMENT . lvalue

    KEYWORD_LOCAL     shift, and go to state 11
    LEFT_PARENTHESIS  shift, and go to state 59
    DOUBLE_COLON      shift, and go to state 22
    ID                shift, and go to state 25

    lvalue  go to state 62
    member  go to state 33
    call    go to state 61


State 18

   70 block: LEFT_BRACE . $@1 block_stmt $@2 RIGHT_BRACE

    $default  reduce using rule 68 ($@1)

    $@1  go to state 63


State 19

   62 objectdef: LEFT_BRACKET . elist RIGHT_BRACKET
   63          | LEFT_BRACKET . indexed RIGHT_BRACKET

    STRING            shift, and go to state 2
    KEYWORD_NOT       shift, and go to state 10
    KEYWORD_LOCAL     shift, and go to state 11
    KEYWORD_TRUE      shift, and go to state 12
    KEYWORD_FALSE     shift, and go to state 13
    KEYWORD_NIL       shift, and go to state 14
    MINUS             shift, and go to state 15
    INCREMENT         shift, and go to state 16
    DECREMENT         shift, and go to state 17
    LEFT_BRACE        shift, and go to state 64
    LEFT_BRACKET      shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 20
    DOUBLE_COLON      shift, and go to state 22
    INTCONST          shift, and go to state 23
    REALCONST         shift, and go to state 24
    ID                shift, and go to state 25

    $default  reduce using rule 59 (elist)

    expr         go to state 65
    term         go to state 29
    assignexpr   go to state 30
    primary      go to state 31
    lvalue       go to state 32
    member       go to state 33
    call         go to state 34
    elist        go to state 66
    objectdef    go to state 35
    indexed      go to state 67
    indexedelem  go to state 68
    const        go to state 39


State 20

   29 term: LEFT_PARENTHESIS . expr RIGHT_PARENTHESIS
   41 primary: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS
   53 call: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    STRING            shift, and go to state 2
    KEYWORD_FUNCTION  shift, and go to state 6
    KEYWORD_NOT       shift, and go to state 10
    KEYWORD_LOCAL     shift, and go to state 11
    KEYWORD_TRUE      shift, and go to state 12
    KEYWORD_FALSE     shift, and go to state 13
    KEYWORD_NIL       shift, and go to state 14
    MINUS             shift, and go to state 15
    INCREMENT         shift, and go to state 16
    DECREMENT         shift, and go to state 17
    LEFT_BRACKET      shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 20
    DOUBLE_COLON      shift, and go to state 22
    INTCONST          shift, and go to state 23
    REALCONST         shift, and go to state 24
    ID                shift, and go to state 25

    expr            go to state 69
    term            go to state 29
    assignexpr      go to state 30
    primary         go to state 31
    lvalue          go to state 32
    member          go to state 33
    call            go to state 34
    objectdef       go to state 35
    functionprefix  go to state 37
    funcdef         go to state 70
    const           go to state 39


State 21

   12 stmt: SEMICOLON .

    $default  reduce using rule 12 (stmt)


State 22

   45 lvalue: DOUBLE_COLON . ID

    ID  shift, and go to state 71


State 23

   83 const: INTCONST .

    $default  reduce using rule 83 (const)


State 24

   84 const: REALCONST .

    $default  reduce using rule 84 (const)


State 25

   43 lvalue: ID .

    $default  reduce using rule 43 (lvalue)


State 26

    0 $accept: program . $end

    $end  shift, and go to state 72


State 27

    1 program: stmt . program

    error             shift, and go to state 1
    STRING            shift, and go to state 2
    KEYWORD_IF        shift, and go to state 3
    KEYWORD_WHILE     shift, and go to state 4
    KEYWORD_FOR       shift, and go to state 5
    KEYWORD_FUNCTION  shift, and go to state 6
    KEYWORD_RETURN    shift, and go to state 7
    KEYWORD_BREAK     shift, and go to state 8
    KEYWORD_CONTINUE  shift, and go to state 9
    KEYWORD_NOT       shift, and go to state 10
    KEYWORD_LOCAL     shift, and go to state 11
    KEYWORD_TRUE      shift, and go to state 12
    KEYWORD_FALSE     shift, and go to state 13
    KEYWORD_NIL       shift, and go to state 14
    MINUS             shift, and go to state 15
    INCREMENT         shift, and go to state 16
    DECREMENT         shift, and go to state 17
    LEFT_BRACE        shift, and go to state 18
    LEFT_BRACKET      shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 20
    SEMICOLON         shift, and go to state 21
    DOUBLE_COLON      shift, and go to state 22
    INTCONST          shift, and go to state 23
    REALCONST         shift, and go to state 24
    ID                shift, and go to state 25

    $end  reduce using rule 2 (program)

    program         go to state 73
    stmt            go to state 27
    expr            go to state 28
    term            go to state 29
    assignexpr      go to state 30
    primary         go to state 31
    lvalue          go to state 32
    member          go to state 33
    call            go to state 34
    objectdef       go to state 35
    block           go to state 36
    functionprefix  go to state 37
    funcdef         go to state 38
    const           go to state 39
    ifprefix        go to state 40
    ifstmt          go to state 41
    whilestart      go to state 42
    whilestmt       go to state 43
    forstmt         go to state 44
    forprefix       go to state 45
    returnstmt      go to state 46


State 28

    3 stmt: expr . SEMICOLON
   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULTIPLY expr
   18     | expr . DIVIDE expr
   19     | expr . MODULO expr
   20     | expr . GREATER_THAN expr
   21     | expr . GREATER_EQUAL expr
   22     | expr . LESS_THAN expr
   23     | expr . LESS_EQUAL expr
   24     | expr . EQUAL expr
   25     | expr . NOT_EQUAL expr
   26     | expr . KEYWORD_AND L expr
   27     | expr . KEYWORD_OR L expr

    KEYWORD_AND    shift, and go to state 74
    KEYWORD_OR     shift, and go to state 75
    PLUS           shift, and go to state 76
    MINUS          shift, and go to state 77
    MULTIPLY       shift, and go to state 78
    DIVIDE         shift, and go to state 79
    MODULO         shift, and go to state 80
    EQUAL          shift, and go to state 81
    NOT_EQUAL      shift, and go to state 82
    LESS_THAN      shift, and go to state 83
    GREATER_THAN   shift, and go to state 84
    LESS_EQUAL     shift, and go to state 85
    GREATER_EQUAL  shift, and go to state 86
    SEMICOLON      shift, and go to state 87


State 29

   28 expr: term .

    $default  reduce using rule 28 (expr)


State 30

   14 expr: assignexpr .

    $default  reduce using rule 14 (expr)


State 31

   36 term: primary .

    $default  reduce using rule 36 (term)


State 32

   33 term: lvalue . INCREMENT
   35     | lvalue . DECREMENT
   37 assignexpr: lvalue . ASSIGN expr
   38 primary: lvalue .
   47 member: lvalue . DOT ID
   48       | lvalue . LEFT_BRACKET expr RIGHT_BRACKET
   52 call: lvalue . callsuffix

    ASSIGN            shift, and go to state 88
    INCREMENT         shift, and go to state 89
    DECREMENT         shift, and go to state 90
    LEFT_BRACKET      shift, and go to state 91
    LEFT_PARENTHESIS  shift, and go to state 92
    DOT               shift, and go to state 93
    DOUBLE_DOT        shift, and go to state 94

    $default  reduce using rule 38 (primary)

    callsuffix  go to state 95
    normcall    go to state 96
    methodcall  go to state 97


State 33

   46 lvalue: member .

    $default  reduce using rule 46 (lvalue)


State 34

   39 primary: call .
   49 member: call . DOT ID
   50       | call . LEFT_BRACKET expr RIGHT_BRACKET
   51 call: call . LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    LEFT_BRACKET      shift, and go to state 98
    LEFT_PARENTHESIS  shift, and go to state 99
    DOT               shift, and go to state 100

    $default  reduce using rule 39 (primary)


State 35

   40 primary: objectdef .

    $default  reduce using rule 40 (primary)


State 36

   10 stmt: block .

    $default  reduce using rule 10 (stmt)


State 37

   82 funcdef: functionprefix . funcargs funcbody

    LEFT_PARENTHESIS  shift, and go to state 101

    funcargs  go to state 102


State 38

   11 stmt: funcdef .

    $default  reduce using rule 11 (stmt)


State 39

   42 primary: const .

    $default  reduce using rule 42 (primary)


State 40

   91 ifstmt: ifprefix . stmt
   92       | ifprefix . stmt elseprefix stmt

    error             shift, and go to state 1
    STRING            shift, and go to state 2
    KEYWORD_IF        shift, and go to state 3
    KEYWORD_WHILE     shift, and go to state 4
    KEYWORD_FOR       shift, and go to state 5
    KEYWORD_FUNCTION  shift, and go to state 6
    KEYWORD_RETURN    shift, and go to state 7
    KEYWORD_BREAK     shift, and go to state 8
    KEYWORD_CONTINUE  shift, and go to state 9
    KEYWORD_NOT       shift, and go to state 10
    KEYWORD_LOCAL     shift, and go to state 11
    KEYWORD_TRUE      shift, and go to state 12
    KEYWORD_FALSE     shift, and go to state 13
    KEYWORD_NIL       shift, and go to state 14
    MINUS             shift, and go to state 15
    INCREMENT         shift, and go to state 16
    DECREMENT         shift, and go to state 17
    LEFT_BRACE        shift, and go to state 18
    LEFT_BRACKET      shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 20
    SEMICOLON         shift, and go to state 21
    DOUBLE_COLON      shift, and go to state 22
    INTCONST          shift, and go to state 23
    REALCONST         shift, and go to state 24
    ID                shift, and go to state 25

    stmt            go to state 103
    expr            go to state 28
    term            go to state 29
    assignexpr      go to state 30
    primary         go to state 31
    lvalue          go to state 32
    member          go to state 33
    call            go to state 34
    objectdef       go to state 35
    block           go to state 36
    functionprefix  go to state 37
    funcdef         go to state 38
    const           go to state 39
    ifprefix        go to state 40
    ifstmt          go to state 41
    whilestart      go to state 42
    whilestmt       go to state 43
    forstmt         go to state 44
    forprefix       go to state 45
    returnstmt      go to state 46


State 41

    4 stmt: ifstmt .

    $default  reduce using rule 4 (stmt)


State 42

   96 whilestmt: whilestart . whilecond whileblock

    LEFT_PARENTHESIS  shift, and go to state 104

    whilecond  go to state 105


State 43

    5 stmt: whilestmt .

    $default  reduce using rule 5 (stmt)


State 44

    6 stmt: forstmt .

    $default  reduce using rule 6 (stmt)


State 45

   99 forstmt: forprefix . S Q elist R RIGHT_PARENTHESIS S stmt S

    $default  reduce using rule 101 (S)

    S  go to state 106


State 46

    7 stmt: returnstmt .

    $default  reduce using rule 7 (stmt)


State 47

   13 stmt: error SEMICOLON .

    $default  reduce using rule 13 (stmt)


State 48

   89 ifprefix: KEYWORD_IF LEFT_PARENTHESIS . expr RIGHT_PARENTHESIS

    STRING            shift, and go to state 2
    KEYWORD_NOT       shift, and go to state 10
    KEYWORD_LOCAL     shift, and go to state 11
    KEYWORD_TRUE      shift, and go to state 12
    KEYWORD_FALSE     shift, and go to state 13
    KEYWORD_NIL       shift, and go to state 14
    MINUS             shift, and go to state 15
    INCREMENT         shift, and go to state 16
    DECREMENT         shift, and go to state 17
    LEFT_BRACKET      shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 20
    DOUBLE_COLON      shift, and go to state 22
    INTCONST          shift, and go to state 23
    REALCONST         shift, and go to state 24
    ID                shift, and go to state 25

    expr        go to state 107
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


State 49

  100 forprefix: KEYWORD_FOR LEFT_PARENTHESIS . Q elist R SEMICOLON L expr SEMICOLON

    $default  reduce using rule 97 (Q)

    Q  go to state 108


State 50

   73 id_tmp: ID .

    $default  reduce using rule 73 (id_tmp)


State 51

   78 functionprefix: KEYWORD_FUNCTION id_tmp .

    $default  reduce using rule 78 (functionprefix)


State 52

  103 returnstmt: KEYWORD_RETURN SEMICOLON .

    $default  reduce using rule 103 (returnstmt)


State 53

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULTIPLY expr
   18     | expr . DIVIDE expr
   19     | expr . MODULO expr
   20     | expr . GREATER_THAN expr
   21     | expr . GREATER_EQUAL expr
   22     | expr . LESS_THAN expr
   23     | expr . LESS_EQUAL expr
   24     | expr . EQUAL expr
   25     | expr . NOT_EQUAL expr
   26     | expr . KEYWORD_AND L expr
   27     | expr . KEYWORD_OR L expr
  104 returnstmt: KEYWORD_RETURN expr . SEMICOLON

    KEYWORD_AND    shift, and go to state 74
    KEYWORD_OR     shift, and go to state 75
    PLUS           shift, and go to state 76
    MINUS          shift, and go to state 77
    MULTIPLY       shift, and go to state 78
    DIVIDE         shift, and go to state 79
    MODULO         shift, and go to state 80
    EQUAL          shift, and go to state 81
    NOT_EQUAL      shift, and go to state 82
    LESS_THAN      shift, and go to state 83
    GREATER_THAN   shift, and go to state 84
    LESS_EQUAL     shift, and go to state 85
    GREATER_EQUAL  shift, and go to state 86
    SEMICOLON      shift, and go to state 109


State 54

    8 stmt: KEYWORD_BREAK SEMICOLON .

    $default  reduce using rule 8 (stmt)


State 55

    9 stmt: KEYWORD_CONTINUE SEMICOLON .

    $default  reduce using rule 9 (stmt)


State 56

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULTIPLY expr
   18     | expr . DIVIDE expr
   19     | expr . MODULO expr
   20     | expr . GREATER_THAN expr
   21     | expr . GREATER_EQUAL expr
   22     | expr . LESS_THAN expr
   23     | expr . LESS_EQUAL expr
   24     | expr . EQUAL expr
   25     | expr . NOT_EQUAL expr
   26     | expr . KEYWORD_AND L expr
   27     | expr . KEYWORD_OR L expr
   31 term: KEYWORD_NOT expr .

    PLUS           shift, and go to state 76
    MINUS          shift, and go to state 77
    MULTIPLY       shift, and go to state 78
    DIVIDE         shift, and go to state 79
    MODULO         shift, and go to state 80
    EQUAL          shift, and go to state 81
    NOT_EQUAL      shift, and go to state 82
    LESS_THAN      shift, and go to state 83
    GREATER_THAN   shift, and go to state 84
    LESS_EQUAL     shift, and go to state 85
    GREATER_EQUAL  shift, and go to state 86

    $default  reduce using rule 31 (term)


State 57

   44 lvalue: KEYWORD_LOCAL ID .

    $default  reduce using rule 44 (lvalue)


State 58

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULTIPLY expr
   18     | expr . DIVIDE expr
   19     | expr . MODULO expr
   20     | expr . GREATER_THAN expr
   21     | expr . GREATER_EQUAL expr
   22     | expr . LESS_THAN expr
   23     | expr . LESS_EQUAL expr
   24     | expr . EQUAL expr
   25     | expr . NOT_EQUAL expr
   26     | expr . KEYWORD_AND L expr
   27     | expr . KEYWORD_OR L expr
   30 term: MINUS expr .

    $default  reduce using rule 30 (term)


State 59

   53 call: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    KEYWORD_FUNCTION  shift, and go to state 6

    functionprefix  go to state 37
    funcdef         go to state 110


State 60

   32 term: INCREMENT lvalue .
   47 member: lvalue . DOT ID
   48       | lvalue . LEFT_BRACKET expr RIGHT_BRACKET
   52 call: lvalue . callsuffix

    LEFT_BRACKET      shift, and go to state 91
    LEFT_PARENTHESIS  shift, and go to state 92
    DOT               shift, and go to state 93
    DOUBLE_DOT        shift, and go to state 94

    $default  reduce using rule 32 (term)

    callsuffix  go to state 95
    normcall    go to state 96
    methodcall  go to state 97


State 61

   49 member: call . DOT ID
   50       | call . LEFT_BRACKET expr RIGHT_BRACKET
   51 call: call . LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    LEFT_BRACKET      shift, and go to state 98
    LEFT_PARENTHESIS  shift, and go to state 99
    DOT               shift, and go to state 100


State 62

   34 term: DECREMENT lvalue .
   47 member: lvalue . DOT ID
   48       | lvalue . LEFT_BRACKET expr RIGHT_BRACKET
   52 call: lvalue . callsuffix

    LEFT_BRACKET      shift, and go to state 91
    LEFT_PARENTHESIS  shift, and go to state 92
    DOT               shift, and go to state 93
    DOUBLE_DOT        shift, and go to state 94

    $default  reduce using rule 34 (term)

    callsuffix  go to state 95
    normcall    go to state 96
    methodcall  go to state 97


State 63

   70 block: LEFT_BRACE $@1 . block_stmt $@2 RIGHT_BRACE

    $default  reduce using rule 72 (block_stmt)

    block_stmt  go to state 111


State 64

   67 indexedelem: LEFT_BRACE . expr COLON expr RIGHT_BRACE

    STRING            shift, and go to state 2
    KEYWORD_NOT       shift, and go to state 10
    KEYWORD_LOCAL     shift, and go to state 11
    KEYWORD_TRUE      shift, and go to state 12
    KEYWORD_FALSE     shift, and go to state 13
    KEYWORD_NIL       shift, and go to state 14
    MINUS             shift, and go to state 15
    INCREMENT         shift, and go to state 16
    DECREMENT         shift, and go to state 17
    LEFT_BRACKET      shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 20
    DOUBLE_COLON      shift, and go to state 22
    INTCONST          shift, and go to state 23
    REALCONST         shift, and go to state 24
    ID                shift, and go to state 25

    expr        go to state 112
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


State 65
